--- a/act-3/styles.css
+++ b/act-3/styles.css
@@ -1,23 +1,27 @@
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .sticky-header {
-  background-color: #333;
+  background-color: red;
   padding: 10px 0;
   z-index: 1000; /* Ensure header is above other content */
-  position:fixed;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 60px;
 }
 
 .navbar .nav-menu {
   margin: 0px;
   padding: 0;
-}
-
-.nav-menu li {
-  margin-right: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 .nav-menu li a {
@@ -32,12 +36,18 @@ body, html {
   display: inline-block;
 }
 
+.sticky {
+  position: sticky;
+  top: 100px;
+  background: blue;
+}
+
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   opacity: 0;
   transition: opacity 0.5s ease;
@@ -59,8 +69,6 @@ body, html {
 .content {
   padding: 20px;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
-
-
